--- a/presets/basic/pages/not_found.html
+++ b/presets/basic/pages/not_found.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="retro.css">
+        <link rel="stylesheet" href="style.css">
         <title>Behold, HTML Page!</title>
     </head>
     <body>
